--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdn.jsdelivr.net/npm/vue@3.2.41/dist/vue.global.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
+
         <title>Document</title>
     </head>
-    <body>
+    <body class="bg-dark text-white ">
         
-       <div id="app">
+       <div id="app" class="text-center  mt-5">
         <h1>Lista della spesa </h1>
-<ul>
-    <li v-for="(tod,i) in todo" :class="tod.done === true ? 'underline' : ''" @click="levaLinea(i)" >
+        <div>
+            <input type="text" v-model="newToDo" @keyup.enter="newToDo">
+            <button class="btn btn-primary" @click="aggiungi()">Aggiungi alla lista </button>
+            <p v-show="error" class="red my-5" >Inserisci oggetto</p>
+        </div>
+<ul class="list-group mt-5 d-flex">
+    <li class="list-item my-2 me-2" v-for="(tod,i) in todo" :class="tod.done === true ? 'underline' : ''" @click="levaLinea(i)" >
         {{ tod.testo }}
-       <button @click="deletet(i)">X</button>
+        <a href="#nogo"><button class="btn-primary btn ms-5 " @click="deletet(i)">X</button></a> 
     </li>
 </ul>
        </div>
